<resources>
    <string name="app_name" translatable="false">YandexMapMarkers</string>
    <string name="goToMap">Map</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title_point">Title</string>
    <string name="point_description">Description</string>
    <string name="points_list">Saved points</string>
</resources>
