<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_point"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/point_description"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_point"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add"
        android:backgroundTint="@color/blue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_description"
        />
</androidx.constraintlayout.widget.ConstraintLayout>