<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/point"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/title_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/green_text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coordinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_point"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/barrier_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blue_button"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blue_button"
        android:text="@string/remove"
        app:layout_constraintBottom_toTopOf="@id/barrier_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="end"
        app:constraint_referenced_ids="title_point, description_point,coordinate"
        app:layout_constraintStart_toStartOf="@+id/edit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="description_point" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />


</androidx.constraintlayout.widget.ConstraintLayout>